--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.6.0",
+    "@stripe/stripe-js": "^7.0.0",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.3",
     "lodash": "^4.17.21",
