--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^7.0.0",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.3",
+    "framer-motion": "^12.6.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
@@ -32,7 +33,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "daisyui": "^5.0.0",
+    "daisyui": "^5.0.18",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "lightningcss": "^1.29.1",
