--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-type-animation": "^3.2.0",
-    "sweetalert2": "^11.17.2"
+    "sweetalert2": "^11.17.2",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
